# trueno-zram

./: .bashrsignore  .clippy.toml  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  clippy.toml  deny.toml  justfile  mutants.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  book.yml  ci.yml  clippy-lint.yml  cross-platform.yml  nightly-bench.yml  nightly.yml  post-release.yml  release.yml  security.yml  stress.yml  ublk-tests.yml
.pmat/: baseline.json  coverage-cache.json  dead-code-cache.json  project.toml
.pmat-metrics/: commit-3a1f07c-meta.json  commit-4886c2e-meta.json  commit-d9f20e9-meta.json
.pmat/metrics/: dependencies.json
benches/: benchmarks.rs
benchmark-results/: BENCHMARK-REPORT-20260107.md
benchmark-results/20260106-141945/: environment.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-142013/: environment.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-142420/: environment.json  kernel_zram_RAND_READ_run1.json  kernel_zram_SEQ_READ_run1.json  regular_swap_RAND_READ_run1.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-142552/: environment.json  kernel_zram_RAND_READ_run1.json  kernel_zram_SEQ_READ_run1.json  regular_swap_RAND_READ_run1.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-142721/: environment.json  kernel_zram_RAND_READ_run1.json  kernel_zram_SEQ_READ_run1.json  regular_swap_RAND_READ_run1.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-142933/: environment.json  kernel_zram_RAND_READ_run1.json  kernel_zram_SEQ_READ_run1.json  regular_swap_RAND_READ_run1.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-143109/: environment.json  kernel_zram_RAND_READ_run1.json  kernel_zram_SEQ_READ_run1.json  regular_swap_RAND_READ_run1.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-143238/: environment.json  kernel_zram_RAND_READ_run1.json  kernel_zram_SEQ_READ_run1.json  regular_swap_RAND_READ_run1.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-143402/: environment.json  kernel_zram_RAND_READ_run1.json  kernel_zram_SEQ_READ_run1.json  regular_swap_RAND_READ_run1.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-143535/: environment.json  kernel_zram_RAND_READ_run1.json  kernel_zram_SEQ_READ_run1.json  regular_swap_RAND_READ_run1.json  regular_swap_SEQ_READ_run1.json
benchmark-results/20260106-184644/: environment.json  (+5 more)
bins/trueno-ublk/: Cargo.toml  UBLK-DAEMON-FIX.md
bins/trueno-ublk/benches/: iops.rs  swap_comparison.rs
bins/trueno-ublk/examples/: batched_benchmark.rs  block_device.rs  compression_stats.rs  entropy_routing.rs  tiered_storage.rs  visualization_demo.rs  zstd_vs_lz4.rs
bins/trueno-ublk/src/: backend.rs  cleanup.rs  daemon.rs  device.rs  duende_lifecycle.rs  lib.rs  main.rs  stats.rs  ublk_target.rs
bins/trueno-ublk/src/cli/: benchmark.rs  compact.rs  create.rs  entropy.rs  find.rs  idle.rs  list.rs  mod.rs  reset.rs  set.rs  stat.rs  top.rs  writeback.rs
bins/trueno-ublk/src/daemon/: batched.rs  entropy.rs  io.rs  mod.rs  page_store.rs  tiered.rs
bins/trueno-ublk/src/daemon/tests/: batched_tests.rs  mod.rs  page_store_tests.rs  perf_tests.rs
bins/trueno-ublk/src/device/: mod.rs
bins/trueno-ublk/src/device/tests/: mod.rs  popperian_integrity.rs  popperian_performance.rs  popperian_resources.rs
bins/trueno-ublk/src/perf/: affinity.rs  batch.rs  hiperf_daemon.rs  mod.rs  numa.rs  polling.rs
bins/trueno-ublk/src/perf/tenx/: adaptive_batch.rs  falsify.rs  fixed_files.rs  huge_pages.rs  lock_free.rs  mod.rs  registered_buffers.rs  sqpoll.rs  zero_copy.rs
bins/trueno-ublk/src/tui/: mod.rs  widgets.rs
bins/trueno-ublk/src/ublk/: ctrl.rs  daemon.rs  io.rs  mod.rs  multi_queue.rs  shim.rs  sys.rs
bins/trueno-ublk/src/ublk/daemon/: mock.rs  mod.rs  tests.rs
bins/trueno-ublk/src/visualize/: collector.rs  mod.rs
bins/trueno-ublk/tests/: g107_start_dev_fix.rs  integration.rs
book/: book.toml
crates/trueno-zram-adaptive/: Cargo.toml
crates/trueno-zram-adaptive/src/: classifier.rs  entropy.rs  lib.rs  model.rs
crates/trueno-zram-cli/: Cargo.toml
crates/trueno-zram-cli/src/: main.rs  output.rs
crates/trueno-zram-cli/src/commands/: benchmark.rs  create.rs  mod.rs  remove.rs  status.rs
crates/trueno-zram-core/: Cargo.toml
crates/trueno-zram-core/benches/: compression.rs
crates/trueno-zram-core/examples/: compress_benchmark.rs  debug_batch_compressor.rs  debug_decompress.rs  decompress_throughput.rs  g119_parallel_benchmark.rs  gpu_decompress_benchmark.rs  gpu_info.rs  parallel_scaling.rs
crates/trueno-zram-core/src/: benchmark.rs  compat.rs  error.rs  integration.rs  lib.rs  page.rs  samefill.rs
crates/trueno-zram-core/src/gpu/: batch.rs  hybrid.rs  mod.rs
crates/trueno-zram-core/src/gpu/batch/: mod.rs  tests.rs
crates/trueno-zram-core/src/lz4/: avx2.rs  avx512.rs  compress.rs  decompress.rs  mod.rs  neon.rs
crates/trueno-zram-core/src/simd/: detect.rs  mod.rs
crates/trueno-zram-core/src/zram/: device.rs  mod.rs  ops.rs
crates/trueno-zram-core/src/zstd/: avx2.rs  compress.rs  decompress.rs  fse.rs  huffman.rs  mod.rs
crates/trueno-zram-core/tests/: zram_integration.rs
crates/trueno-zram-generator/: Cargo.toml
crates/trueno-zram-generator/src/: config.rs  fstab.rs  main.rs  unit.rs
docker/: Dockerfile.swap-deadlock  Dockerfile.ublk-test  docker-compose.swap-deadlock.yml  docker-compose.test.yml
docs/: 404.html  changelog.html  contributing.html  introduction.html  print.html  release_qa_checklist.md  searchindex.js  searchindex.json  toc.html  toc.js
scripts/: docker-test-harness.sh  falsification-runner.sh  scientific-swap-benchmark.sh  scientific-swap-benchmark.test.sh  test-swap-deadlock.sh
src/: lib.rs  verification_specs.rs
tests/: contract_traits.rs  property_test.rs  regression_test.rs  smoke_test.rs
(+57 files in other folders)
