[workspace]
resolver = "2"
members = [
    "crates/trueno-zram-core",
    "crates/trueno-zram-adaptive",
    "crates/trueno-zram-generator",
    "crates/trueno-zram-cli",
    "bins/trueno-ublk",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["Noah Gift <noah@paiml.com>"]
repository = "https://github.com/paiml/trueno-zram"
keywords = ["compression", "zram", "simd", "lz4", "zstd"]
categories = ["compression", "memory-management"]

[workspace.dependencies]
# Internal crates
trueno-zram-core = { version = "0.3.0", path = "crates/trueno-zram-core" }
trueno-zram-adaptive = { version = "0.3.0", path = "crates/trueno-zram-adaptive" }

# Error handling
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Testing
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

# Async (for CLI)
tokio = { version = "1.44", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1