[package]
name = "trueno-zram-adaptive"
description = "ML-driven compression algorithm selection for trueno-zram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
trueno-zram-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["std"]
std = []

[lints]
workspace = true
